applications/dashboard/upstream/centraldashboard/components/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
